--- a/Source/SenseNet/RadaCode.InDoc.Core/Views/Namings/ExistingNamings.cshtml
+++ b/Source/SenseNet/RadaCode.InDoc.Core/Views/Namings/ExistingNamings.cshtml
@@ -14,7 +14,29 @@
         <div data-bind="foreach: ExistingNamings">
             @foreach (var naming in Model.ExistingNamings)
             {
-                Html.RenderPartial("NamingView", naming);
+                <div style="display: table-row">
+                <span style="display: table-cell" data-bind="text: typeName()">@Model.TypeName</span>
+                    <div style="display: table-cell">
+                        <div style="display: block">
+                            <div style="display: table-row">
+                                <div style="display: table-cell" data-bind="foreach: formatBlocks()">
+                                    @foreach (var block in Model.NameBlocks)
+                                    {
+                                        <input type="text" class="name-block" value="@block"/>
+                                    }
+                                </div>
+                            </div>
+                            <div style="display: table-row">
+                                <div style="display: table-cell" data-bind="foreach: paramBlocks()">
+                                    @foreach (var block in Model.ParamBlocks)
+                                    {
+                                        <input type="text" class="param-block" value="@block"/>
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             }
         </div>
     </div>
