Combo box implementation

--- a/Source/SenseNet/RadaCode.InDoc.Core/Views/Namings/ExistingNamings.cshtml
+++ b/Source/SenseNet/RadaCode.InDoc.Core/Views/Namings/ExistingNamings.cshtml
@@ -22,6 +22,10 @@
 			<input type="radio" name="group1" id="text-block" value="text" checked/>
 			<label for="text-block">Текст</label>  
 		</fieldset>   
+		<fieldset>
+			<legend>Спец поле</legend>
+			
+		</fieldset> 
 	</div>
 	<p>На данный момент в системе зарегистрированы следующие политики именования документов:</p>
 	<br/>
